--- a/docker-compose-integration.yaml
+++ b/docker-compose-integration.yaml
@@ -5,7 +5,7 @@ services:
     volumes:
        - /etc/localtime:/etc/localtime:ro
     environment:
-      URL: 'http://beta.parliament.uk'
+      URL: 'http://www.example.com'
       SAUCE_USERNAME: 'unknown'
       SAUCE_ACCESS_KEY: 'unknown'
     command: make isauce
